# Bragg-Curve-Study

Bragg_curve/: README.md  plot_results.py  vis.mac
Bragg_curve/include/: detector_construction.hh  primary_generator_action.hh  stepping_action.hh
Bragg_curve/src/: detector_construction.cc  run_action.cc
Bragg_curve_Z,V_study/: CMakeLists.txt  README.md  cmds.txt  main.cc  plot_bethebloch.py  run_alpha_4MeV.mac  run_alpha_8MeV.mac  run_proton_2MeV.mac  run_proton_4MeV.mac  run_proton_8MeV.mac
Bragg_curve_Z,V_study/include/: action_initialization.hh  primary_generator_action.hh  run_action.hh
Bragg_curve_Z,V_study/src/: action_initialization.cc  primary_generator_action.cc  run_action.cc  stepping_action.cc
